log
vi., 21 de mar. de 2025 17:25:52: 
 tests:  0|5
total_score: 0/70
3f6cb15
vi., 21 de mar. de 2025 17:28:21: 
 exercises.c | 36 +++++++++++++++++++++++++-----------
 1 file changed, 25 insertions(+), 11 deletions(-)
 tests:  1|4
total_score: 10/70
125e066
vi., 21 de mar. de 2025 17:29:25: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
aa871f2
vi., 21 de mar. de 2025 17:30:00: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:4: error: unknown type name 'stack'
    stack *aux = create_stack();
    ^~~~~
exercises.c:99:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    stack *aux = create_stack();
                 ^~~~~~~~~~~~
exercises.c:103:15: error: request for member 'ele' in something not a structure or union
       push(aux.ele);
               ^
exercises.c:103:7: error: too few arguments to function 'push'
       push(aux.ele);
       ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: declared here
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:107:24: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
    void *ele_dos = top(aux);
                        ^~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:112:11: error: passing argument 1 of 'pop' from incompatible pointer type [-Werror=incompatible-pointer-types]
       pop(aux);
           ^~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:17:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *pop(Stack *stack) { return popFront(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:113:21: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
       ele_dos = top(aux);
                     ^~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
9de55e3
vi., 21 de mar. de 2025 17:30:27: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:103:15: error: 'aux' is a pointer; did you mean to use '->'?
       push(aux.ele);
               ^
               ->
exercises.c:103:7: error: too few arguments to function 'push'
       push(aux.ele);
       ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: declared here
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
Compilation failed
1ca932e
vi., 21 de mar. de 2025 17:30:54: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 30/70
1934231
vi., 21 de mar. de 2025 17:32:38: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  3|2
total_score: 30/70
f824620
vi., 21 de mar. de 2025 20:28:42: 
 exercises.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  3|2
total_score: 30/70
5e4e28b
vi., 21 de mar. de 2025 20:32:52: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:93:16: error: unused variable 'temp' [-Werror=unused-variable]
          void *temp = auxiiar; // Guardamos referencia al nodo actual
                ^~~~
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'eliminaElementos':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
610aa3b
vi., 21 de mar. de 2025 20:34:02: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:93:16: error: unused variable 'temp' [-Werror=unused-variable]
          void *temp = auxiiar;
                ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fd826df
vi., 21 de mar. de 2025 20:34:41: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 30/70
8f30901
vi., 21 de mar. de 2025 20:36:05: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 30/70
2fcffae
vi., 21 de mar. de 2025 20:49:00: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  4|1
total_score: 50/70
482f091
